--- a/Tests/CK.Monitoring.Tests/CK.Monitoring.Tests.csproj
+++ b/Tests/CK.Monitoring.Tests/CK.Monitoring.Tests.csproj
@@ -1,15 +1,15 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-    <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
-        <IsPackable>False</IsPackable>
-    </PropertyGroup>
-    <ItemGroup>
-        <ProjectReference Include="..\..\CK.Monitoring\CK.Monitoring.csproj" />
-    </ItemGroup>
-    <ItemGroup>
-        <PackageReference Include="Shouldly" Version="4.3.0" />
-        <PackageReference Include="NUnit" Version="4.2.2" />
-        <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
-    </ItemGroup>
+<Project Sdk="Microsoft.NET.Sdk">
+  <PropertyGroup>
+    <TargetFramework>net8.0</TargetFramework>
+    <IsPackable>False</IsPackable>
+  </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\CK.Monitoring\CK.Monitoring.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Shouldly" Version="4.3.0" />
+    <PackageReference Include="NUnit" Version="4.4.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="5.1.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
+  </ItemGroup>
 </Project>
